Fix nav/logo, breadcrumbs, CTA spacing, legal pages, image reassignment
- Remove duplicate CamperDNA text from nav and footer (logo only)
- Increase nav logo to 52px, footer logo to 44px
- Fix nav__mobile hidden by default (desktop bleed bug)
- Hide nav CTA button on mobile (already present in mobile nav)
- Fix breadcrumbs showing 'None' — now shows actual page title
- Add Privacy Policy, Cookie Policy and Disclaimer pages
- Fix CTA block excessive margin (let section padding do the work)
- Strengthen hero overlay gradient for better text legibility
- Improve image assignments: cost article → van exterior, beginners guide → Scotland, homepage buying-a-van card → VW exterior, kit & gear card → outdoor cooking
- Add legal pages to sitemap.xml

--- a/buying-a-van/dvla-motor-caravan/index.html
+++ b/buying-a-van/dvla-motor-caravan/index.html
@@ -37,8 +37,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="40" height="40">
-      <span class="nav__logo-text">CamperDNA</span>
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -65,7 +64,7 @@
   <img class="hero__img" src="/assets/images/01-vw-exterior/vw-transporter-claudio-schwarz-10--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/buying-a-van/">Buying a Van</a> <span aria-hidden="true">›</span> <span aria-current="page">None</span></nav>
+    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/buying-a-van/">Buying a Van</a> <span aria-hidden="true">›</span> <span aria-current="page">DVLA Motor Caravan Classification UK</span></nav>
     <div class="article-meta">
       <span class="article-meta__tag">Buying A Van</span>
       <span>Independent advice</span>
@@ -175,8 +174,7 @@ SA99 1BA</p>
     <div class="footer__grid">
       <div class="footer__brand">
         <div class="footer__logo">
-          <img src="/assets/images/logo.png" alt="CamperDNA" width="36" height="36">
-          <span class="footer__logo-text">CamperDNA</span>
+          <img src="/assets/images/logo.png" alt="CamperDNA" width="44" height="44">
         </div>
         <p class="footer__tagline">Free, independent campervan profiling. Find the right van for your life — not the one someone wants to sell you.</p>
       </div>
