--- a/decision-guide/campervan-beginners-guide/index.html
+++ b/decision-guide/campervan-beginners-guide/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Campervan Beginners Guide UK — Everything You Need to Know">
   <meta property="og:description" content="New to campervans? This guide explains everything from scratch — what a campervan is, the different types, how to choose one, and where to start.">
   <meta property="og:url" content="https://camper-dna.com/decision-guide/campervan-beginners-guide/">
-  <meta property="og:image" content="https://camper-dna.com/assets/images/02-modern-exterior/van-life-europe-help-stay-02--hero--overlay.jpg">
+  <meta property="og:image" content="https://camper-dna.com/assets/images/03-uk-europe-locations/scotland-campervan-jordan-irving-02--hero--overlay.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" href="/assets/images/favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
   "headline": "Campervan Beginners Guide",
   "description": "New to campervans? This guide explains everything from scratch — what a campervan is, the different types, how to choose one, and where to start.",
   "url": "https://camper-dna.com/decision-guide/campervan-beginners-guide/",
-  "image": "https://camper-dna.com/assets/images/02-modern-exterior/van-life-europe-help-stay-02--hero--overlay.jpg",
+  "image": "https://camper-dna.com/assets/images/03-uk-europe-locations/scotland-campervan-jordan-irving-02--hero--overlay.jpg",
   "author": {"@type": "Person", "name": "Overlander"},
   "publisher": {"@type": "Organization", "name": "CamperDNA", "url": "https://camper-dna.com"},
   "datePublished": "2025-01-01",
@@ -37,8 +37,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="40" height="40">
-      <span class="nav__logo-text">CamperDNA</span>
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link nav__link--active">Decision Guide</a></li>
@@ -62,10 +61,10 @@
 </nav>
 
 <section class="hero hero--article" aria-label="Page hero">
-  <img class="hero__img" src="/assets/images/02-modern-exterior/van-life-europe-help-stay-02--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
+  <img class="hero__img" src="/assets/images/03-uk-europe-locations/scotland-campervan-jordan-irving-02--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/decision-guide/">Decision Guide</a> <span aria-hidden="true">›</span> <span aria-current="page">None</span></nav>
+    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/decision-guide/">Decision Guide</a> <span aria-hidden="true">›</span> <span aria-current="page">Campervan Beginners Guide</span></nav>
     <div class="article-meta">
       <span class="article-meta__tag">Decision Guide</span>
       <span>Independent advice</span>
@@ -187,8 +186,7 @@ The two main options in the VW Transporter market have different price points, d
     <div class="footer__grid">
       <div class="footer__brand">
         <div class="footer__logo">
-          <img src="/assets/images/logo.png" alt="CamperDNA" width="36" height="36">
-          <span class="footer__logo-text">CamperDNA</span>
+          <img src="/assets/images/logo.png" alt="CamperDNA" width="44" height="44">
         </div>
         <p class="footer__tagline">Free, independent campervan profiling. Find the right van for your life — not the one someone wants to sell you.</p>
       </div>
