--- a/decision-guide/should-i-buy-a-campervan/index.html
+++ b/decision-guide/should-i-buy-a-campervan/index.html
@@ -37,8 +37,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="40" height="40">
-      <span class="nav__logo-text">CamperDNA</span>
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link nav__link--active">Decision Guide</a></li>
@@ -65,7 +64,7 @@
   <img class="hero__img" src="/assets/images/02-modern-exterior/campervan-mountain-julian-ackroyd-02--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/decision-guide/">Decision Guide</a> <span aria-hidden="true">›</span> <span aria-current="page">None</span></nav>
+    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/decision-guide/">Decision Guide</a> <span aria-hidden="true">›</span> <span aria-current="page">Should I Buy a Campervan?</span></nav>
     <div class="article-meta">
       <span class="article-meta__tag">Decision Guide</span>
       <span>Independent advice</span>
@@ -163,8 +162,7 @@
     <div class="footer__grid">
       <div class="footer__brand">
         <div class="footer__logo">
-          <img src="/assets/images/logo.png" alt="CamperDNA" width="36" height="36">
-          <span class="footer__logo-text">CamperDNA</span>
+          <img src="/assets/images/logo.png" alt="CamperDNA" width="44" height="44">
         </div>
         <p class="footer__tagline">Free, independent campervan profiling. Find the right van for your life — not the one someone wants to sell you.</p>
       </div>
