--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="40" height="40">
-      <span class="nav__logo-text">CamperDNA</span>
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -116,7 +115,7 @@
         </div>
       </a>
       <a href="/buying-a-van/" class="pillar-card">
-        <img class="pillar-card__img" src="/assets/images/03-uk-europe-locations/scotland-campervan-jandira-sonnendeck-01--wide.jpg" alt="Campervan in Scotland" loading="lazy">
+        <img class="pillar-card__img" src="/assets/images/01-vw-exterior/vw-t6-exterior-balkan-campers-02--wide.jpg" alt="Buying a VW campervan" loading="lazy">
         <div class="pillar-card__overlay"></div>
         <div class="pillar-card__body">
           <p class="pillar-card__tag">Buying a Van</p>
@@ -126,7 +125,7 @@
         </div>
       </a>
       <a href="/kit-and-gear/" class="pillar-card">
-        <img class="pillar-card__img" src="/assets/images/05-lifestyle/lifestyle-couple-clay-banks-01--wide.jpg" alt="Van life couple" loading="lazy">
+        <img class="pillar-card__img" src="/assets/images/09-practical/outdoor-cooking-dina-badamshina-01--wide.jpg" alt="Van life kit and gear" loading="lazy">
         <div class="pillar-card__overlay"></div>
         <div class="pillar-card__body">
           <p class="pillar-card__tag">Kit &amp; Gear</p>
@@ -188,8 +187,7 @@
     <div class="footer__grid">
       <div class="footer__brand">
         <div class="footer__logo">
-          <img src="/assets/images/logo.png" alt="CamperDNA" width="36" height="36">
-          <span class="footer__logo-text">CamperDNA</span>
+          <img src="/assets/images/logo.png" alt="CamperDNA" width="44" height="44">
         </div>
         <p class="footer__tagline">Free, independent campervan profiling. Find the right van for your life — not the one someone wants to sell you.</p>
       </div>
