--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buying a Campervan UK — Complete Guide | CamperDNA</title>
-  <meta name="description" content="How to buy a campervan in the UK. Inspection checklists, donor vehicle guides, insurance, DVLA classification, costs and more. Honest, independent advice.">
-  <link rel="canonical" href="https://camper-dna.com/buying-a-van/">
+  <title>Privacy Policy — CamperDNA</title>
+  <meta name="description" content="Privacy Policy for CamperDNA, the free independent campervan profiling tool.">
+  <link rel="canonical" href="https://camper-dna.com/privacy-policy/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Buying a Campervan UK — Complete Guide | CamperDNA">
-  <meta property="og:description" content="How to buy a campervan in the UK. Inspection checklists, donor vehicle guides, insurance, DVLA classification, costs and more. Honest, independent advice.">
-  <meta property="og:url" content="https://camper-dna.com/buying-a-van/">
-  <meta property="og:image" content="https://camper-dna.com/assets/images/01-vw-exterior/vw-transporter-vitali-adutskevich-06--hero--overlay.jpg">
+  <meta property="og:title" content="Privacy Policy — CamperDNA">
+  <meta property="og:description" content="Privacy Policy for CamperDNA, the free independent campervan profiling tool.">
+  <meta property="og:url" content="https://camper-dna.com/privacy-policy/">
+  <meta property="og:image" content="https://camper-dna.com/assets/images/og-default.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" href="/assets/images/favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
       <li><a href="/van-systems/" class="nav__link ">Van Systems</a></li>
-      <li><a href="/buying-a-van/" class="nav__link nav__link--active">Buying a Van</a></li>
+      <li><a href="/buying-a-van/" class="nav__link ">Buying a Van</a></li>
       <li><a href="/kit-and-gear/" class="nav__link ">Kit & Gear</a></li>
     </ul>
     <a href="/your-camperdna/" class="btn btn--amber nav__cta">Get Your Profile</a>
@@ -46,64 +46,34 @@
   </div>
 </nav>
 
-<section class="hero hero--hub" aria-label="Hub hero">
-  <img class="hero__img" src="/assets/images/01-vw-exterior/vw-transporter-vitali-adutskevich-06--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
+<section class="hero hero--article" aria-label="Page hero">
+  <img class="hero__img" src="/assets/images/05-lifestyle/lifestyle-sunset-julian-ackroyd-01--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <span aria-current="page">Buying a Campervan Guide</span></nav>
-    <span class="hero__eyebrow">Buying A Van</span>
-    <h1 class="hero__title">Buying a Campervan Guide</h1>
-    <p class="hero__sub">How to buy a campervan in the UK. Inspection checklists, donor vehicle guides, insurance, DVLA classification, costs and more. Honest, independent advice.</p>
+    <h1 class="hero__title">Privacy Policy</h1>
   </div>
 </section>
 
-<section class="section">
-  <div class="container">
-    <div class="article-body container--narrow" style="margin:0 auto 3rem">
-      <h2>The practical mechanics of buying</h2>
-<p>Once you've worked out what you want — van type, layout, systems — you still have to actually buy it. This section covers the practical process: finding the right vehicle, inspecting it properly, handling the paperwork, sorting insurance and understanding the real costs.</p>
-<p>It's an area where people often rush. The excitement of finding a van can override the due diligence that protects a significant investment. The guides here are designed to slow that process down just enough to avoid the most common mistakes.</p>
-<hr />
-    </div>
-    <div class="spoke-grid">
-    <a href="/buying-a-van/inspection-checklist/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/01-vw-exterior/vw-t6-exterior-balkan-campers-02--card.jpg" alt="Used Campervan Inspection Checklist" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">Used Campervan Inspection Checklist</h3>
-        <p class="spoke-card__desc">A full checklist for the physical inspection. Print and take it with you.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a>
-    <a href="/buying-a-van/dvla-motor-caravan/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/01-vw-exterior/vw-transporter-claudio-schwarz-10--card.jpg" alt="DVLA Motor Caravan Classification" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">DVLA Motor Caravan Classification</h3>
-        <p class="spoke-card__desc">How to register your conversion as a motor caravan.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a>
-    <a href="/buying-a-van/insurance/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/07-coastal/coastal-leo-visions-01--card.jpg" alt="Campervan Insurance UK" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">Campervan Insurance UK</h3>
-        <p class="spoke-card__desc">A specialist market. What standard policies miss.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a>
-    <a href="/buying-a-van/cost-breakdown/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/04-interiors/interior-conversion-antonio-araujo-02--card.jpg" alt="Conversion Cost Breakdown" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">Conversion Cost Breakdown</h3>
-        <p class="spoke-card__desc">Professional vs self-build. Where people overspend.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a></div>
+<div class="article-wrap">
+  <div class="article-body">
+    
+<h2>Privacy Policy</h2>
+<p><em>Last updated: January 2025</em></p>
+<p>CamperDNA (<strong>camper-dna.com</strong>) is operated by Earlswood Rising. This policy explains what data we collect and how we use it.</p>
+<h3>What we collect</h3>
+<p>CamperDNA does not require registration or login. We do not collect names, email addresses or payment information. If you use the CamperDNA profiler tool, your answers are processed locally to generate your profile and are not stored on our servers.</p>
+<p>We use Google Analytics to understand how visitors use the site. This involves anonymised usage data including pages visited, time on site and approximate location (country/city level). We do not enable Google Signals or cross-site tracking.</p>
+<h3>Cookies</h3>
+<p>We use a small number of cookies necessary for site functionality and analytics. See our <a href="/cookie-policy/">Cookie Policy</a> for full details.</p>
+<h3>Third-party links</h3>
+<p>CamperDNA contains links to third-party sites including Amazon affiliate links where indicated. We are not responsible for the privacy practices of those sites.</p>
+<h3>Your rights</h3>
+<p>Under UK GDPR you have the right to access, correct or request deletion of any personal data we hold. As we collect minimal data, there is generally nothing to provide or delete. For any privacy queries, contact: <a href="mailto:hello@camper-dna.com">hello@camper-dna.com</a></p>
+<h3>Changes</h3>
+<p>We may update this policy from time to time. The date at the top of the page shows when it was last revised.</p>
+
   </div>
-</section>
+</div>
 
 
 <section class="section section--grey">
