--- a/decision-guide/campervan-cost-uk/index.html
+++ b/decision-guide/campervan-cost-uk/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="How Much Does a Campervan Cost UK? (2025 Honest Guide)">
   <meta property="og:description" content="Real campervan costs in the UK — purchase price, conversion costs, running costs and hidden expenses. What you actually need to budget in 2025.">
   <meta property="og:url" content="https://camper-dna.com/decision-guide/campervan-cost-uk/">
-  <meta property="og:image" content="https://camper-dna.com/assets/images/04-interiors/interior-conversion-clay-banks-05--hero--overlay.jpg">
+  <meta property="og:image" content="https://camper-dna.com/assets/images/01-vw-exterior/vw-t6-exterior-annie-spratt-01--hero--overlay.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" href="/assets/images/favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
   "headline": "How Much Does a Campervan Cost?",
   "description": "Real campervan costs in the UK — purchase price, conversion costs, running costs and hidden expenses. What you actually need to budget in 2025.",
   "url": "https://camper-dna.com/decision-guide/campervan-cost-uk/",
-  "image": "https://camper-dna.com/assets/images/04-interiors/interior-conversion-clay-banks-05--hero--overlay.jpg",
+  "image": "https://camper-dna.com/assets/images/01-vw-exterior/vw-t6-exterior-annie-spratt-01--hero--overlay.jpg",
   "author": {"@type": "Person", "name": "Overlander"},
   "publisher": {"@type": "Organization", "name": "CamperDNA", "url": "https://camper-dna.com"},
   "datePublished": "2025-01-01",
@@ -37,8 +37,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="40" height="40">
-      <span class="nav__logo-text">CamperDNA</span>
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link nav__link--active">Decision Guide</a></li>
@@ -62,10 +61,10 @@
 </nav>
 
 <section class="hero hero--article" aria-label="Page hero">
-  <img class="hero__img" src="/assets/images/04-interiors/interior-conversion-clay-banks-05--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
+  <img class="hero__img" src="/assets/images/01-vw-exterior/vw-t6-exterior-annie-spratt-01--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/decision-guide/">Decision Guide</a> <span aria-hidden="true">›</span> <span aria-current="page">None</span></nav>
+    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <a href="/decision-guide/">Decision Guide</a> <span aria-hidden="true">›</span> <span aria-current="page">How Much Does a Campervan Cost?</span></nav>
     <div class="article-meta">
       <span class="article-meta__tag">Decision Guide</span>
       <span>Independent advice</span>
@@ -266,8 +265,7 @@
     <div class="footer__grid">
       <div class="footer__brand">
         <div class="footer__logo">
-          <img src="/assets/images/logo.png" alt="CamperDNA" width="36" height="36">
-          <span class="footer__logo-text">CamperDNA</span>
+          <img src="/assets/images/logo.png" alt="CamperDNA" width="44" height="44">
         </div>
         <p class="footer__tagline">Free, independent campervan profiling. Find the right van for your life — not the one someone wants to sell you.</p>
       </div>
