--- a/decision-guide/index.html
+++ b/decision-guide/index.html
@@ -23,8 +23,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="40" height="40">
-      <span class="nav__logo-text">CamperDNA</span>
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link nav__link--active">Decision Guide</a></li>
@@ -51,7 +50,7 @@
   <img class="hero__img" src="/assets/images/01-vw-exterior/vw-t6-exterior-annie-spratt-01--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <span aria-current="page">None</span></nav>
+    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <span aria-current="page">The Campervan Decision Guide</span></nav>
     <span class="hero__eyebrow">Decision Guide</span>
     <h1 class="hero__title">The Campervan Decision Guide</h1>
     <p class="hero__sub">Everything you need to make the big campervan decisions. Donor van or pre-converted? T5 or T6? What size? How much? Honest answers, no sales agenda.</p>
@@ -79,7 +78,7 @@
       </div>
     </a>
     <a href="/decision-guide/campervan-cost-uk/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/04-interiors/interior-conversion-clay-banks-05--card.jpg" alt="How Much Does a Campervan Cost?" loading="lazy"></div>
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/01-vw-exterior/vw-t6-exterior-annie-spratt-01--card.jpg" alt="How Much Does a Campervan Cost?" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Decision Guide</p>
         <h3 class="spoke-card__title">How Much Does a Campervan Cost?</h3>
@@ -106,7 +105,7 @@
       </div>
     </a>
     <a href="/decision-guide/campervan-beginners-guide/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/02-modern-exterior/van-life-europe-help-stay-02--card.jpg" alt="Campervan Beginners Guide" loading="lazy"></div>
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/03-uk-europe-locations/scotland-campervan-jordan-irving-02--card.jpg" alt="Campervan Beginners Guide" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Decision Guide</p>
         <h3 class="spoke-card__title">Campervan Beginners Guide</h3>
@@ -135,8 +134,7 @@
     <div class="footer__grid">
       <div class="footer__brand">
         <div class="footer__logo">
-          <img src="/assets/images/logo.png" alt="CamperDNA" width="36" height="36">
-          <span class="footer__logo-text">CamperDNA</span>
+          <img src="/assets/images/logo.png" alt="CamperDNA" width="44" height="44">
         </div>
         <p class="footer__tagline">Free, independent campervan profiling. Find the right van for your life — not the one someone wants to sell you.</p>
       </div>
