--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buying a Campervan UK — Complete Guide | CamperDNA</title>
-  <meta name="description" content="How to buy a campervan in the UK. Inspection checklists, donor vehicle guides, insurance, DVLA classification, costs and more. Honest, independent advice.">
-  <link rel="canonical" href="https://camper-dna.com/buying-a-van/">
+  <title>Disclaimer — CamperDNA</title>
+  <meta name="description" content="Disclaimer for CamperDNA, the free independent campervan profiling tool.">
+  <link rel="canonical" href="https://camper-dna.com/disclaimer/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Buying a Campervan UK — Complete Guide | CamperDNA">
-  <meta property="og:description" content="How to buy a campervan in the UK. Inspection checklists, donor vehicle guides, insurance, DVLA classification, costs and more. Honest, independent advice.">
-  <meta property="og:url" content="https://camper-dna.com/buying-a-van/">
-  <meta property="og:image" content="https://camper-dna.com/assets/images/01-vw-exterior/vw-transporter-vitali-adutskevich-06--hero--overlay.jpg">
+  <meta property="og:title" content="Disclaimer — CamperDNA">
+  <meta property="og:description" content="Disclaimer for CamperDNA, the free independent campervan profiling tool.">
+  <meta property="og:url" content="https://camper-dna.com/disclaimer/">
+  <meta property="og:image" content="https://camper-dna.com/assets/images/og-default.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" href="/assets/images/favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
       <li><a href="/van-systems/" class="nav__link ">Van Systems</a></li>
-      <li><a href="/buying-a-van/" class="nav__link nav__link--active">Buying a Van</a></li>
+      <li><a href="/buying-a-van/" class="nav__link ">Buying a Van</a></li>
       <li><a href="/kit-and-gear/" class="nav__link ">Kit & Gear</a></li>
     </ul>
     <a href="/your-camperdna/" class="btn btn--amber nav__cta">Get Your Profile</a>
@@ -46,64 +46,30 @@
   </div>
 </nav>
 
-<section class="hero hero--hub" aria-label="Hub hero">
-  <img class="hero__img" src="/assets/images/01-vw-exterior/vw-transporter-vitali-adutskevich-06--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
+<section class="hero hero--article" aria-label="Page hero">
+  <img class="hero__img" src="/assets/images/05-lifestyle/lifestyle-sunset-julian-ackroyd-01--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <span aria-current="page">Buying a Campervan Guide</span></nav>
-    <span class="hero__eyebrow">Buying A Van</span>
-    <h1 class="hero__title">Buying a Campervan Guide</h1>
-    <p class="hero__sub">How to buy a campervan in the UK. Inspection checklists, donor vehicle guides, insurance, DVLA classification, costs and more. Honest, independent advice.</p>
+    <h1 class="hero__title">Disclaimer</h1>
   </div>
 </section>
 
-<section class="section">
-  <div class="container">
-    <div class="article-body container--narrow" style="margin:0 auto 3rem">
-      <h2>The practical mechanics of buying</h2>
-<p>Once you've worked out what you want — van type, layout, systems — you still have to actually buy it. This section covers the practical process: finding the right vehicle, inspecting it properly, handling the paperwork, sorting insurance and understanding the real costs.</p>
-<p>It's an area where people often rush. The excitement of finding a van can override the due diligence that protects a significant investment. The guides here are designed to slow that process down just enough to avoid the most common mistakes.</p>
-<hr />
-    </div>
-    <div class="spoke-grid">
-    <a href="/buying-a-van/inspection-checklist/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/01-vw-exterior/vw-t6-exterior-balkan-campers-02--card.jpg" alt="Used Campervan Inspection Checklist" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">Used Campervan Inspection Checklist</h3>
-        <p class="spoke-card__desc">A full checklist for the physical inspection. Print and take it with you.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a>
-    <a href="/buying-a-van/dvla-motor-caravan/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/01-vw-exterior/vw-transporter-claudio-schwarz-10--card.jpg" alt="DVLA Motor Caravan Classification" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">DVLA Motor Caravan Classification</h3>
-        <p class="spoke-card__desc">How to register your conversion as a motor caravan.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a>
-    <a href="/buying-a-van/insurance/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/07-coastal/coastal-leo-visions-01--card.jpg" alt="Campervan Insurance UK" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">Campervan Insurance UK</h3>
-        <p class="spoke-card__desc">A specialist market. What standard policies miss.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a>
-    <a href="/buying-a-van/cost-breakdown/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/04-interiors/interior-conversion-antonio-araujo-02--card.jpg" alt="Conversion Cost Breakdown" loading="lazy"></div>
-      <div class="spoke-card__body">
-        <p class="spoke-card__tag">Buying a Van</p>
-        <h3 class="spoke-card__title">Conversion Cost Breakdown</h3>
-        <p class="spoke-card__desc">Professional vs self-build. Where people overspend.</p>
-        <span class="spoke-card__link">Read more &rarr;</span>
-      </div>
-    </a></div>
+<div class="article-wrap">
+  <div class="article-body">
+    
+<h2>Disclaimer</h2>
+<p>The information on CamperDNA is for general guidance only. While we aim to keep it accurate and up to date, we make no guarantees about completeness or suitability for your specific circumstances.</p>
+<h3>Not professional advice</h3>
+<p>Nothing on this site constitutes legal, financial, mechanical or insurance advice. Always seek independent professional advice before making major purchase or financial decisions.</p>
+<h3>Affiliate links</h3>
+<p>Some pages contain affiliate links, clearly marked. If you click one and make a purchase, CamperDNA may earn a small commission at no extra cost to you. This never influences our recommendations — see our <a href="/how-we-make-money/">How We Make Money</a> page for full details.</p>
+<h3>Accuracy</h3>
+<p>Campervan prices, regulations and product availability change frequently. Always verify important details directly with sellers, manufacturers and official sources before acting on information from this site.</p>
+<h3>External links</h3>
+<p>CamperDNA links to external websites for reference. We are not responsible for the content, accuracy or availability of those sites.</p>
+
   </div>
-</section>
+</div>
 
 
 <section class="section section--grey">
