Update legal pages with rewritten content — Feb 2026, campfire@ email

--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -58,17 +58,42 @@
   <div class="article-body">
     
 <h2>Cookie Policy</h2>
-<p><em>Last updated: January 2025</em></p>
-<p>This policy explains what cookies CamperDNA uses and why.</p>
-<h3>What are cookies?</h3>
-<p>Cookies are small text files stored on your device when you visit a website. They help sites remember your preferences and understand how you use them.</p>
-<h3>Cookies we use</h3>
-<p><strong>Essential cookies</strong> — Required for the site to function correctly. These include session management and security cookies. You cannot opt out of these without stopping use of the site.</p>
-<p><strong>Analytics cookies (Google Analytics)</strong> — We use Google Analytics to understand which pages are most useful and how visitors move around the site. These cookies collect anonymised data only. You can opt out via the <a href="https://tools.google.com/dlpage/gaoptout" rel="noopener noreferrer">Google Analytics opt-out add-on</a>.</p>
-<h3>Managing cookies</h3>
-<p>You can control and delete cookies through your browser settings. Most browsers allow you to refuse new cookies, delete existing cookies, and browse in private mode. Deleting cookies may affect site functionality.</p>
-<h3>Contact</h3>
-<p>Questions about our use of cookies: <a href="mailto:hello@camper-dna.com">hello@camper-dna.com</a></p>
+<p><em>Last updated: February 2026</em></p>
+<p>Cookies are small text files that websites place on your device. This policy explains which cookies CamperDNA uses, why, and how you can control them.</p>
+<p>We keep our cookie use minimal. We don't use cookies to track you across the web or build advertising profiles without your knowledge.</p>
+
+<h3>1. The Types of Cookies We Use</h3>
+<h4>Essential Cookies</h4>
+<p>These are required for the site to work. They handle things like remembering your cookie preferences so we don't ask you every time you visit. You cannot opt out of essential cookies — without them, parts of the site won't function.</p>
+<h4>Analytics Cookies (Google Analytics 4)</h4>
+<p>We use Google Analytics 4 to understand how people use CamperDNA — which pages are popular, how people move through the questionnaire, and where visitors come from. This helps us improve the site over time. All data collected by Google Analytics is anonymised. We don't use it to identify individual visitors. These cookies are only set if you accept analytics cookies when the banner appears.</p>
+<h4>Advertising Cookies</h4>
+<p>We do not currently use advertising cookies. CamperDNA may introduce display advertising in future to help sustain the site. If we do, we will update this policy and our consent banner before that happens, and you will be asked for fresh consent at that point.</p>
+
+<h3>2. Cookie Reference Table</h3>
+<table class="cost-table">
+<thead><tr><th>Cookie Name</th><th>Provider</th><th>Purpose</th><th>Expires</th></tr></thead>
+<tbody>
+<tr><td>cookieConsent</td><td>CamperDNA</td><td>Stores your cookie preferences</td><td>1 year</td></tr>
+<tr><td>_ga</td><td>Google</td><td>Distinguishes unique users (GA4)</td><td>2 years</td></tr>
+<tr><td>_ga_*</td><td>Google</td><td>Maintains session state (GA4)</td><td>2 years</td></tr>
+<tr><td>_gid</td><td>Google</td><td>Distinguishes users (24hr)</td><td>24 hours</td></tr>
+</tbody>
+</table>
+
+<h3>3. Managing Your Cookie Preferences</h3>
+<p>When you first visit CamperDNA, a banner will ask for your cookie preferences. You can accept all cookies, accept essential cookies only, or customise your choices. You can change your preferences at any time via the 'Cookie Settings' link in the site footer.</p>
+<p>You can also manage or delete cookies directly through your browser settings: Chrome (Settings &gt; Privacy and security &gt; Cookies), Firefox (Settings &gt; Privacy &amp; Security), Safari (Preferences &gt; Privacy), Edge (Settings &gt; Cookies and site permissions). Note that blocking all cookies may affect how CamperDNA functions, particularly the questionnaire tool.</p>
+
+<h3>4. Third-Party Cookies</h3>
+<p>Some cookies are set by third-party services we use (such as Google Analytics). We don't control how those third parties use the data collected by their cookies. We'd encourage you to review <a href="https://policies.google.com/privacy" rel="noopener noreferrer">Google's privacy policy</a> for more detail on how GA4 data is handled.</p>
+
+<h3>5. Changes to This Policy</h3>
+<p>We'll update this policy whenever we make meaningful changes to how we use cookies. The 'Last updated' date at the top of this page will change when that happens.</p>
+
+<h3>6. Contact</h3>
+<p>Questions about our use of cookies? Drop us a line at <a href="mailto:campfire@camper-dna.com">campfire@camper-dna.com</a>.</p>
+<p><em>The CamperDNA Team</em></p>
 
   </div>
 </div>
