--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -58,15 +58,30 @@
   <div class="article-body">
     
 <h2>Disclaimer</h2>
-<p>The information on CamperDNA is for general guidance only. While we aim to keep it accurate and up to date, we make no guarantees about completeness or suitability for your specific circumstances.</p>
-<h3>Not professional advice</h3>
-<p>Nothing on this site constitutes legal, financial, mechanical or insurance advice. Always seek independent professional advice before making major purchase or financial decisions.</p>
-<h3>Affiliate links</h3>
-<p>Some pages contain affiliate links, clearly marked. If you click one and make a purchase, CamperDNA may earn a small commission at no extra cost to you. This never influences our recommendations — see our <a href="/how-we-make-money/">How We Make Money</a> page for full details.</p>
-<h3>Accuracy</h3>
-<p>Campervan prices, regulations and product availability change frequently. Always verify important details directly with sellers, manufacturers and official sources before acting on information from this site.</p>
-<h3>External links</h3>
-<p>CamperDNA links to external websites for reference. We are not responsible for the content, accuracy or availability of those sites.</p>
+<p><em>Last updated: February 2026</em></p>
+<p>CamperDNA started because buying a campervan is genuinely hard. Not hard like defusing a bomb, but hard in that quietly maddening way where you spend months on forums, Facebook groups, and YouTube rabbit holes, and still aren't sure if you're making the right call.</p>
+<p>I've been through it. I spent the best part of a year trying to figure out the right setup before I bought my first van. Since then I've owned one for many years, customised it more times than I'd like to admit, and travelled in it across the UK and Europe — solo, with friends, and with my family and kids in tow, from weekends away to festival season.</p>
+<p>All of that experience went into building this tool. It's meant to be a helpful shortcut, not a definitive authority. Think of it as getting advice from someone in the community who's been there — hopefully useful, honest, and offered in good faith, rather than a formal recommendation.</p>
+
+<h3>Not Professional Advice</h3>
+<p>The questionnaire results, campervan profiles, and all content on CamperDNA are for guidance and general information only. They do not constitute professional, financial, or consumer advice.</p>
+<p>Buying a campervan is a significant financial decision and your circumstances, needs, and budget are unique to you. We strongly recommend doing your own research, seeking independent advice where appropriate, and doing thorough due diligence before purchasing any vehicle or product.</p>
+
+<h3>Accuracy of Information</h3>
+<p>We do our best to keep information on CamperDNA accurate and up to date, but the campervan market moves quickly. Specifications, prices, and availability change. We make no guarantees about the accuracy, completeness, or currency of any information on this site. Always verify key details directly with manufacturers, dealers, or sellers before making any decisions.</p>
+
+<h3>Affiliate Links</h3>
+<p>Some content on CamperDNA contains affiliate links. If you click a link and go on to make a purchase, we may receive a small commission at no extra cost to you. It's one of the ways we offset the time and effort that goes into building and maintaining the site. Affiliate relationships never influence our recommendations. All affiliate content is clearly labelled. See our <a href="/how-we-make-money/">How We Make Money</a> page for full details.</p>
+
+<h3>External Links</h3>
+<p>CamperDNA may link to external websites for reference or further reading. We don't control those sites and aren't responsible for their content or availability. A link doesn't imply endorsement.</p>
+
+<h3>Limitation of Liability</h3>
+<p>To the fullest extent permitted by law, CamperDNA accepts no liability for any loss or damage, financial or otherwise, arising from your use of this site or reliance on any information or recommendations contained within it.</p>
+
+<p>This site is built with a lot of love for the campervan world. If it helps even a handful of people avoid the head-scratching we went through, it's done its job. Take the results as a starting point, enjoy the process, and feel free to drop us a message if you think something's off.</p>
+<p>Happy travels.</p>
+<p><em>The CamperDNA Team</em><br><a href="mailto:campfire@camper-dna.com">campfire@camper-dna.com</a></p>
 
   </div>
 </div>
