--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -58,19 +58,60 @@
   <div class="article-body">
     
 <h2>Privacy Policy</h2>
-<p><em>Last updated: January 2025</em></p>
-<p>CamperDNA (<strong>camper-dna.com</strong>) is operated by Earlswood Rising. This policy explains what data we collect and how we use it.</p>
-<h3>What we collect</h3>
-<p>CamperDNA does not require registration or login. We do not collect names, email addresses or payment information. If you use the CamperDNA profiler tool, your answers are processed locally to generate your profile and are not stored on our servers.</p>
-<p>We use Google Analytics to understand how visitors use the site. This involves anonymised usage data including pages visited, time on site and approximate location (country/city level). We do not enable Google Signals or cross-site tracking.</p>
-<h3>Cookies</h3>
-<p>We use a small number of cookies necessary for site functionality and analytics. See our <a href="/cookie-policy/">Cookie Policy</a> for full details.</p>
-<h3>Third-party links</h3>
-<p>CamperDNA contains links to third-party sites including Amazon affiliate links where indicated. We are not responsible for the privacy practices of those sites.</p>
-<h3>Your rights</h3>
-<p>Under UK GDPR you have the right to access, correct or request deletion of any personal data we hold. As we collect minimal data, there is generally nothing to provide or delete. For any privacy queries, contact: <a href="mailto:hello@camper-dna.com">hello@camper-dna.com</a></p>
-<h3>Changes</h3>
-<p>We may update this policy from time to time. The date at the top of the page shows when it was last revised.</p>
+<p><em>Last updated: February 2026</em></p>
+<p>Privacy policies are not exactly the highlight of anyone's day. But if you've taken the time to do our questionnaire, you've shared a bit about yourself with us — your travel style, your budget, how you like to wake up in the morning. That matters, and we think you deserve to know exactly what we do with it.</p>
+<p>We collect only what we need, we don't sell your data, and we're not in the business of cluttering your inbox. The longer version is below, written as plainly as we can manage.</p>
+
+<h3>1. Who We Are</h3>
+<p>CamperDNA is an independent website. We help people find the right campervan setup for their lifestyle through a free questionnaire tool and related educational content. For data protection purposes, we are the data controller for personal information collected through this site.</p>
+
+<h3>2. What Data We Collect</h3>
+<h4>2.1 Questionnaire Responses</h4>
+<p>When you complete our campervan profile questionnaire, we collect the responses you provide. These may include information about your travel habits, budget preferences, lifestyle, and campervan priorities. This data is used solely to generate your personalised profile result.</p>
+<h4>2.2 Email Address</h4>
+<p>If you choose to receive your profile report by email, we will collect your email address. Providing your email is entirely optional — you can view your results on-screen without submitting it.</p>
+<h4>2.3 Usage Data</h4>
+<p>We automatically collect certain technical data when you visit the site, including IP address (anonymised), browser type and version, pages visited and time spent on the site, referring website or search term, and device type and operating system. This data is collected via Google Analytics 4 and is used in aggregated, anonymised form to understand how people use the site and to improve our content.</p>
+<h4>2.4 Cookies</h4>
+<p>We use cookies and similar tracking technologies to operate the site and analyse usage. See Section 7 (Cookies) for full details.</p>
+
+<h3>3. How We Use Your Data</h3>
+<p>We use the data we collect to: generate and display your personalised campervan profile result; send you your profile report by email if requested; analyse site performance and user behaviour in aggregated, anonymised form; improve the questionnaire, content, and overall user experience; and comply with our legal obligations.</p>
+
+<h3>4. Legal Basis for Processing (UK GDPR)</h3>
+<p>Under UK GDPR, we rely on the following legal bases: <strong>legitimate interests</strong> — for analysing site usage in aggregated form to improve our service, where this does not override your rights; and <strong>contract performance</strong> — for delivering your questionnaire results and email report when requested.</p>
+
+<h3>5. Affiliate Links &amp; Third Parties</h3>
+<p>CamperDNA earns revenue through affiliate links in our educational content. When you click an affiliate link and make a purchase, we may receive a commission at no additional cost to you. All affiliate relationships are clearly disclosed. We do not share your personal data with affiliate partners or advertisers.</p>
+
+<h3>6. Data Sharing</h3>
+<p>We do not sell your personal data. We may share data with the following trusted third parties solely to operate the site: Google Analytics (for anonymised website analytics), email service providers (to deliver your profile report, if requested), and hosting and infrastructure providers. All third-party processors are required to handle your data securely and in accordance with applicable law.</p>
+
+<h3>7. Cookies</h3>
+<p>We use essential cookies (required for the site to function — these cannot be disabled) and analytics cookies (used to understand how visitors use the site via Google Analytics — only set with your consent). When you first visit the site, you will be asked for your cookie preferences. See our <a href="/cookie-policy/">Cookie Policy</a> for full details.</p>
+
+<h3>8. Data Retention</h3>
+<p>We retain your data only for as long as necessary: questionnaire responses are session-based only unless you provide your email for a report; email address and report data is retained until you request deletion; anonymised analytics data is retained per Google Analytics default retention settings (up to 14 months).</p>
+
+<h3>9. Your Rights</h3>
+<p>Under UK GDPR, you have the right to access, correct, or request deletion of your personal data; restrict or object to processing; and data portability. To exercise any of these rights, contact us at: <a href="mailto:campfire@camper-dna.com">campfire@camper-dna.com</a>. You also have the right to lodge a complaint with the Information Commissioner's Office (ICO) at <a href="https://ico.org.uk" rel="noopener noreferrer">ico.org.uk</a>.</p>
+
+<h3>10. Data Security</h3>
+<p>We take reasonable technical and organisational measures to protect your personal data. Our site is served over HTTPS and we work only with reputable third-party providers. However, no method of internet transmission is 100% secure.</p>
+
+<h3>11. International Transfers</h3>
+<p>Some third-party service providers (such as Google) may process data outside the UK or EEA. Where this occurs, we ensure appropriate safeguards are in place, such as Standard Contractual Clauses, in line with UK GDPR requirements.</p>
+
+<h3>12. Children's Privacy</h3>
+<p>CamperDNA is not directed at children under the age of 13. We do not knowingly collect personal data from children. If you believe a child has provided us with personal data, please contact us and we will delete it promptly.</p>
+
+<h3>13. Changes to This Policy</h3>
+<p>We may update this Privacy Policy from time to time. When we do, we will update the 'Last updated' date at the top of this page.</p>
+
+<h3>14. Contact Us</h3>
+<p>If you have any questions about this Privacy Policy or how we handle your data, please get in touch: <a href="mailto:campfire@camper-dna.com">campfire@camper-dna.com</a></p>
+<p>We'll never do anything with your data that we wouldn't be comfortable telling you about over a brew at the campsite. The campfire is always on.</p>
+<p><em>The CamperDNA Team</em></p>
 
   </div>
 </div>
